test/message/fail/throw-during-IteratorCloseOnException.out
*%(basename)s:6: TypeError: Iterator value 0 is not an entry object
Object.fromEntries([0]);
       ^
TypeError: Iterator value 0 is not an entry object
    at Function.fromEntries (<anonymous>)
    at *%(basename)s:6:8
